--- a/Files/page2.html
+++ b/Files/page2.html
@@ -1,15 +1,58 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link href="../styles/style.css" rel="stylesheet">
-        <meta charset="utf-8">
-    </head>
-    <body>
-        <script src="../scripts/p5.js"></script>
-        <script src="../scripts/pg2.js"></script>
-        
-    </body>
- 
-    
+
+<head>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" rel="stylesheet"
+        integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
+    <link href="../styles/style.css" rel="stylesheet">
+    <link href="../styles/skeleton.css" rel="stylesheet">
+    <link href="../styles/index_Style.css" rel="stylesheet">
+    <link href="../styles/loadout_Style.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <script src="https://unpkg.com/vue@2.3.3/dist/vue.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="../scripts/debounce_and_throttle.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
+    <script src="../scripts/numeric/src/numeric.js"></script>
+    <script src="../scripts/math.min.js"></script>
+    <script type="text/x-mathjax-config"></script>
+</head>
+
+<body>
+    <script src="../scripts/p5.js"></script>
+    <div class="tab-content">
+        <ul class="nav nav-tabs nav-justified">
+            <li :class="['shaded' : '', 'active', 'tabLeft']">
+                <a data-toggle="tab" href="#instructions">Instructions</a>
+            </li>
+            <li :class="[ 'shaded' : '', 'tabRight']">
+                <a data-toggle="tab" href="#visualisation">Visualisation</a>
+            </li>
+        </ul>
+        <div id="instructions" class="tab-pane fade in active show">
+            <p class="main-text">
+                To use the visualisation, select a cell in the grid to place a pedestrian. Click on start to see the
+                pedestrian move. To re-initialise the visualisation, click on the reset button.
+                <ul>
+                    <li>A <span style="color:black">black</span> cell indicates the current location of a pedestrian</li>
+                    <li>A <span style ="color: #FFCC00">yellow</span> cell indicates a possible move by the pedestrian</li>
+                    <li>A <span style ="color: #90ee90">green</span> cell indicates the move chosen by the pedestrian</li>
+                    <li>A <span style ="color: #969696">grey</span> cell represents a wall</li>
+                </ul>
+            </p>
+        </div>
+        <div id="visualisation" class="tab-pane fade">
+            <iframe src="pg2vis.html"
+                style="width: 96vw; height: 180vh; float: left; margin-top: 10px"></iframe>
+        </div>
+    </div>
+
+</body>
+
+
 
 </html>
