--- a/Files/page3.html
+++ b/Files/page3.html
@@ -35,7 +35,7 @@
         </ul>
         <div id="instructions" class="tab-pane fade in active show">
             <p class="main-text">
-                To use the visualisation, select a wall cell (<span style="color: #969696">grey</span>) to be an exit
+                To use the visualisation, select a wall cell (<span style="color: #969696">grey</span>) or a floor cell to be an exit
                 cell. The floor field values will display, ranging from 1 - 256, with 256 being the exit cell and 1
                 being furthest cell from an exit. 
 
