added instructions tab, 5th page visualisation

--- a/Files/page5_page.html
+++ b/Files/page5_page.html
@@ -35,11 +35,10 @@
         </ul>
         <div id="instructions" class="tab-pane fade in active show">
             <p class="main-text">
-                Select how many pedestrians you want to have in the room in the textbox (in the range of 1 - 324). Then,
-                click on the <b>"Create Exit Cells"</b> button, and select a wall (<span
+                To add pedestrians, click on the <b>"Create Pedestrian"</b> button and select empty (white) cells on the
+                grid to place them. Then, click on the "Create Exit Cells" button, and select a wall (<span
                     style="color: #969696">grey</span>)
-                cell to create an exit cell. Click on <b>"Start"</b> to start the visualisation. Note how the number of
-                timesteps needed to evacuate changes depending on the number of pedestrians.
+                cell to create an exit cell. Click on <b>"Start"</b> to start the visualisation.
             <ul>
                 <li>A <span style="color:black">black</span> cell indicates the current location of a pedestrian</li>
                 <li>A <span style="color: #969696">grey</span> cell represents a wall</li>
@@ -48,7 +47,7 @@
             </p>
         </div>
         <div id="visualisation" class="tab-pane fade">
-            <iframe src="pg4vis.html"
+            <iframe src="pg5vis.html"
                 style="width: 96vw; height: 180vh; float: left; margin-top: 15px; margin-left: 25px;"></iframe>
         </div>
     </div>
