--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                     <div class="rightload text even" id='loadout5' key="loadout5" v-if="currentSection === 5">
 
                         <!--Interactive Zone Sub Containers-->
-                        <iframe src="Files/page5.html"
+                        <iframe src="Files/page5_page.html"
                             style="width: 67vw; height: 96vh; float: left; margin-top: 15px; margin-left: 25px;"></iframe>
 
                     </div>
