--- a/Files/page2.html
+++ b/Files/page2.html
@@ -34,7 +34,7 @@
             </li>
         </ul>
         <div id="instructions" class="tab-pane fade in active show">
-            <p class="main-text">
+            <p class="main-text" style = "margin-top: 15px">
                 To use the visualisation, select a cell in the grid to place a pedestrian. Click on start to see the
                 pedestrian move. To re-initialise the visualisation, click on the reset button.
                 <ul>
@@ -47,7 +47,7 @@
         </div>
         <div id="visualisation" class="tab-pane fade">
             <iframe src="pg2vis.html"
-                style="width: 96vw; height: 180vh; float: left; margin-top: 10px"></iframe>
+                style="width: 96vw; height: 85vh; float: left; margin-top: 15px"></iframe>
         </div>
     </div>
 
