--- a/Files/page3.html
+++ b/Files/page3.html
@@ -34,7 +34,7 @@
             </li>
         </ul>
         <div id="instructions" class="tab-pane fade in active show">
-            <p class="main-text">
+            <p class="main-text" style = "margin-top: 15px">
                 To use the visualisation, select a wall cell (<span style="color: #969696">grey</span>) or a floor cell to be an exit
                 cell. The floor field values will display, ranging from 1 - 256, with 256 being the exit cell and 1
                 being furthest cell from an exit. 
@@ -43,7 +43,7 @@
         </div>
         <div id="visualisation" class="tab-pane fade">
             <iframe src="pg3vis.html"
-                style="width: 96vw; height: 180vh; float: left; margin-top: 15px; margin-left: 25px;"></iframe>
+                style="width: 96vw; height: 85vh; float: left; margin-top: 15px"></iframe>
         </div>
     </div>
 
