--- a/Files/page4.html
+++ b/Files/page4.html
@@ -34,7 +34,7 @@
             </li>
         </ul>
         <div id="instructions" class="tab-pane fade in active show">
-            <p class="main-text">
+            <p class="main-text" style = "margin-top: 15px">
                 Select how many pedestrians you want to have in the room in the textbox (in the range of 1 - 324). Then,
                 click on the <b>"Create Exit Cells"</b> button, and select a wall (<span
                     style="color: #969696">grey</span>)
@@ -49,7 +49,7 @@
         </div>
         <div id="visualisation" class="tab-pane fade">
             <iframe src="pg4vis.html"
-                style="width: 96vw; height: 180vh; float: left; margin-top: 15px; margin-left: 25px;"></iframe>
+                style="width: 96vw; height: 85vh; float: left; margin-top: 15px"></iframe>
         </div>
     </div>
 
