--- a/Files/page5_page.html
+++ b/Files/page5_page.html
@@ -34,7 +34,7 @@
             </li>
         </ul>
         <div id="instructions" class="tab-pane fade in active show">
-            <p class="main-text">
+            <p class="main-text" style = "margin-top: 15px">
                 To add pedestrians, click on the <b>"Create Pedestrian"</b> button and select empty (white) cells on the
                 grid to place them. Then, click on the "Create Exit Cells" button, and select a wall (<span
                     style="color: #969696">grey</span>)
@@ -48,7 +48,7 @@
         </div>
         <div id="visualisation" class="tab-pane fade">
             <iframe src="pg5vis.html"
-                style="width: 96vw; height: 180vh; float: left; margin-top: 15px; margin-left: 25px;"></iframe>
+                style="width: 96vw; height: 85vh; float: left; margin-top: 15px"></iframe>
         </div>
     </div>
 
