--- a/index.html
+++ b/index.html
@@ -130,11 +130,10 @@
                         characteristics and behaviours, rather than as simply part of a whole ‘crowd’. CA models, which
                         this visualisation describes, are considered to be ABMs, due to the method in which they
                         simulate pedestrians and the environment.
-                        <img src="assets/AgentBasedModel.png"
-                            alt="Representation of pedestrians in macroscopic and agent-based simulation models"
-                            width="380" height="210" class="center">
                     </p>
-
+                    <img src="assets/AgentBasedModel.png"
+                        alt="Representation of pedestrians in macroscopic and agent-based simulation models" width="380"
+                        height="210" class="center">
                     <p class="main-text">
                         PED simulation models typically require a variety of inputs to run. The layout of the building,
                         and the number of occupants in the building are basic requirements for any pedestrian simulation
@@ -337,7 +336,8 @@
                     <div class="text section-body odd" id="p5">
                         <p class="main-text">
                             The CA model presented in this visualisation is a very basic kind of CA model. It could be
-                            extended or upgraded in various ways, in order to make the agent’s behaviour, or the way they
+                            extended or upgraded in various ways, in order to make the agent’s behaviour, or the way
+                            they
                             interact with the environment, more realistic.
                         </p>
                         <p class="main-text">
@@ -434,16 +434,14 @@
 
 
                         <!--Interactive Zone Sub Containers-->
-                        <iframe src="Files/page2.html"
-                            style="width: 67vw; height: 98vh;"></iframe>
+                        <iframe src="Files/page2.html" style="width: 67vw; height: 98vh;"></iframe>
 
                     </div>
 
                     <div class="rightload text even" id='loadout3' key="loadout3" v-if="currentSection === 3">
 
                         <!--Interactive Zone Sub Containers-->
-                        <iframe src="Files/page3.html"
-                            style="width: 67vw; height: 98vh;"></iframe>
+                        <iframe src="Files/page3.html" style="width: 67vw; height: 98vh;"></iframe>
 
 
                     </div>
@@ -451,15 +449,13 @@
                     <div class="rightload text even" id='loadout4' key="loadout4" v-if="currentSection === 4">
 
                         <!--Interactive Zone Sub Containers-->
-                        <iframe src="Files/page4.html"
-                            style="width: 67vw; height: 98vh;"></iframe>
+                        <iframe src="Files/page4.html" style="width: 67vw; height: 98vh;"></iframe>
 
                     </div>
                     <div class="rightload text even" id='loadout5' key="loadout5" v-if="currentSection === 5">
 
                         <!--Interactive Zone Sub Containers-->
-                        <iframe src="Files/page5_page.html"
-                            style="width: 67vw; height: 98vh;"></iframe>
+                        <iframe src="Files/page5_page.html" style="width: 67vw; height: 98vh;"></iframe>
 
                     </div>
 
